# opskarta

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.kiro/specs/repo-reorganization/: design.md  requirements.md  tasks.md
docs/: method.md
docs/spec/: 000-overview.md  020-nodes.md  030-views.md  050-extensibility.md
examples/: README.md  hello.views.yaml
schemas/: opskarta.plan.schema.json  opskarta.views.schema.json
specs/v1/: README.md  SPEC.md  SPEC.min.md
specs/v1/en/: README.md  SPEC.md  SPEC.min.md
specs/v1/examples/: README.md
specs/v1/ru/: README.md  SPEC.md
specs/v1/schemas/: plan.schema.json  views.schema.json
specs/v1/spec/: 00-introduction.md  20-nodes.md  30-views-file.md  40-statuses.md  50-scheduling.md  55-yaml-notes.md  60-validation.md  90-extensibility.md  95-renderer-mermaid.md
specs/v1/tests/: test_scheduling.py
specs/v1/tools/: README.md  build_spec.py  requirements.txt  validate.py
specs/v2/: README.md
specs/v2/en/: MIGRATION.md  README.md  SPEC.md
specs/v2/ru/: MIGRATION.md  README.md  SPEC.md
specs/v2/schemas/: .gitkeep  fragment.schema.json  merged-plan.schema.json
specs/v2/tests/: .gitkeep  __init__.py  test_cli.py  test_effort.py  test_loader.py  test_render_common.py  test_render_deps.py  test_render_gantt.py  test_render_list.py  test_render_tree.py  test_scheduler.py  test_validator.py
specs/v2/tools/: .gitkeep  (+10 more)
src/opskarta/: __init__.py  cli.py  errors.py  io.py  scheduling.py  validation.py
tests/: conftest.py  test_render.py
(+126 files in other folders)
